-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8-shenandoah, 11-shenandoah, 14, 15
-
Component/s: hotspot
-
b15
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8241542 | 14.0.2 | Aleksey Shipilev | P4 | Resolved | Fixed | b01 |
The test gc/logging/TestMetaSpaceLog.java is disabled (after JDK-8212630) for Shenandoah because it would fail if run.
The test expects to find the output from a call to print_metaspace_chage(), but Shenandoah never calls that function. (Unless it's intentional that Shenandoah doesn't call that function and can't pass this test.)
The test expects to find the output from a call to print_metaspace_chage(), but Shenandoah never calls that function. (Unless it's intentional that Shenandoah doesn't call that function and can't pass this test.)
- backported by
-
JDK-8241542 gc/logging/TestMetaSpaceLog.java doesn't work for Shenandoah
-
- Resolved
-
- relates to
-
JDK-8212630 jtreg/gc/logging/TestMetaSpaceLog.java failed with Agent timed out
-
- Resolved
-
-
JDK-8225215 gc/logging/TestMetaSpaceLog.java doesn't work for ZGC
-
- Closed
-