8225216: gc/logging/TestMetaSpaceLog.java doesn't work for Shenandoah

Reviewed-by: shade